--- a/full.html
+++ b/full.html
@@ -134,7 +134,7 @@
     </div>
 <!--------------------------------------------------------------------------------------------------------------------------------------------->
 <!--------------------------------------------------------------third page--------------------------------------------------------------------->
-<div class=" container  d-flex bg-light align-content-center justify-content-center" style="height: 400px;">
+<div class="   d-flex bg-light align-content-center justify-content-center" style="height: 400px;">
     <div class=" align-content-center m-5 ms-5 " style="width: 30%;" >
         <div class="fs-1 m-5">
             <h1 style="font-size: 40px;">Enter a new age of Web design</h1>
@@ -150,8 +150,15 @@
 </div>
 <!--------------------------------------------------------------------------------------------------------------------------------------------->
 <!------------------------------------------------------------Fourth page---------------------------------------------------------------------->
-<div class="container" id="background">
-
+<div class=" align-content-center"  id="background">
+    <div style="margin-left: 221px;">
+    <div class="container text-light ps-5 " >
+        <h1 style="font-size: 4.5rem;" >Stop waiting.<br> Start building.</h1>
+    </div>
+        <div class="container text-light ps-5">
+        <a href="#" class="btn btn-outline-light rounded-pill mt-3">Download for free</a>
+    </div>
+    </div>
 </div>
 <div class="container-fluid justify-content-center  pt-5 " style="background-image: linear-gradient(to right,#3b32ee,#931ce3);">
     <div class="container-fluid d-flex justify-content-center  mb-3" >
