--- a/2.html
+++ b/2.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <div class="container d-flex" style="height: 500px;">
+    <div class=" d-flex" style="height: 500px;">
         <div class="rounded-circle mt-5 ms-5 me-auto" id="back2" > 
             <div style="position: absolute;left: 80px; top: -30px;"><img src="phone.png" height="450px" width="220px" > </div>
         </div>
