--- a/full.html
+++ b/full.html
@@ -102,10 +102,10 @@
     <!----------------------------------------------------------------------------------------------------------------------------------------->
     <!-----------------------------------------------------------second page------------------------------------------------------------------->
     <div class="container d-flex" style="height: 500px;">
-        <div class="rounded-circle mt-5 ms-5 me-auto" id="back2" > 
+        <div class="rounded-circle mt-5 ms-5 me-5" id="back2" > 
             <div style="position: absolute;left: 80px; top: -30px;"><img src="phone.png" height="450px" width="220px" > </div>
         </div>
-        <div class="container-fluid mt-5">
+        <div class="container-fluid mt-5 ms-5">
             <div class="row">
                 <div class="col-sm-6 text-center">
                     <i class="fa fa-mobile " aria-hidden="true" style="color: purple; font-size: 100px;"></i>
